--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>Git chek</title>
 </head>
 <body>
-    <h1> Hello</h1>
-    <h2> my name is Nastya</h2>
+    <h1 class="tegline_1"> Hello</h1>
+    <h2 class="tegline_2"> my name is Nastya</h2>
 </body>
 
 </html>
