--- a/index.html
+++ b/index.html
@@ -4,11 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Git chek</title>
+    <title>WebStudio</title>
 </head>
 <body>
-    <h1 class="tegline_1"> Hello</h1>
-    <h2 class="tegline_2"> my name is Nastya</h2>
+    
 </body>
-
 </html>
