--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +7,128 @@
     <title>WebStudio</title>
 </head>
 <body>
-    
+    <!--Шапка проекта-->
+    <header>
+        <!--Лого компании-->
+        <a lang="en" href="">WebStudio</a>
+        <!--Навигация на страницы-->
+        <nav>
+          <ul>
+            <li><a href="">Студия</a></li>
+            <li><a href="">Портфолио</a></li>
+            <li><a href="">Контакты</a></li>
+          </ul>
+        </nav>
+        <!--Контакты-->
+        <ul>
+            <li><a href="mailto:info@devstudio.com ">info@devstudio.com</a></li>
+            <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        </ul>
+
+    </header>
+    <!--Main content-->
+    <main>
+        <!--Hero-->
+        <section>
+            <h1>Эффективные решения для вашего бизнеса</h1>
+            <button type="button">Заказать услугу</button>
+        </section>
+
+        <!--чем мы выделяемся на рынке-->
+        <section>
+            <!--заголовок скрою потом, он для читалок-->
+            <h2>Чем мы выделаемся на рынке</h2> 
+            <ul>
+                <li>
+                    <h3>Внимание к деталям</h3>
+                    <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+                </li>
+                <li>
+                    <h3>Пунктуальность</h3>
+                    <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+                </li>
+                <li>
+                    <h3>Планирование</h3>
+                    <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+                </li>
+                <li>
+                    <h3>Современные технологии</h3>
+                    <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+                </li>
+            </ul>
+        </section>
+
+        <!--чем мы занимаемся-->
+        <section>
+            <h2>Чем мы занимаемся</h2>
+            <ul>
+                <li>
+                    <img src="./images/box-1.jpg" alt="вёрстка сайтов" width="370">
+                </li>
+                <li>
+                    <img src="./images/box-2.jpg" alt="создание мобильных версий сайтов" width="370">
+                </li>
+                <li>
+                    <img src="./images/box-3.jpg" alt="дизайн и визуальное оформление сайтов" width="370">
+                </li>
+            </ul>
+        </section>
+
+        <!--Наша команда-->
+        <section>
+            <h2>Наша команда</h2>
+            <ul>
+                <li>
+                    <figure>
+                    <img src="./images/man-1.jpg" alt="улыбающийся мужчина в очках" width="270">
+                    <figcaption>
+                    <h3>Игорь Демьяненко</h3>
+                    <h4>Product Designer</h4>
+                    </figcaption>
+                    </figure>
+                </li>
+                <li>
+                    <figure>
+                    <img src="./images/man-2.jpg" alt="улабыющияся девушка в очках" width="270">
+                    <figcaption>
+                    <h3>Ольга Репина</h3>
+                    <h4>Frontend Developer</h4>
+                    </figcaption>
+                    </figure>
+                </li>
+                <li>
+                    <figure>
+                    <img src="./images/man-3.jpg" alt="улыбающийся мужчина" width="270">
+                    <figcaption>
+                    <h3>Николай Тарасов</h3>
+                    <h4>Marketing</h4>
+                    </figcaption>
+                    </figure>
+                </li>
+                <li>
+                    <figure>
+                    <img src="./images/man-4.jpg" alt="другой улабыющияся мужчина в очках" width="270">
+                    <figcaption>
+                    <h3>Михаил Ермаков</h3>
+                    <h4>UI Designer</h4>
+                    </figcaption>
+                    </figure>
+                </li>
+            </ul>
+        </section>
+        
+
+    </main>
+    <!--Footer-->
+    <footer>
+        <a href="">WebStudio</a>
+        <address>
+            <ul>
+                <li>Киев, пр-т Леси Украинки, 26</li>
+                <li><a href="mailto:info@devstudio.com ">info@devstudio.com</a></li>
+                <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+            </ul>
+        </address>
+    </footer>
 </body>
 </html>
