--- a/index.html
+++ b/index.html
@@ -79,40 +79,24 @@
             <h2>Наша команда</h2>
             <ul>
                 <li>
-                    <figure>
                     <img src="./images/man-1.jpg" alt="улыбающийся мужчина в очках" width="270">
-                    <figcaption>
                     <h3>Игорь Демьяненко</h3>
                     <h4>Product Designer</h4>
-                    </figcaption>
-                    </figure>
                 </li>
                 <li>
-                    <figure>
                     <img src="./images/man-2.jpg" alt="улабыющияся девушка в очках" width="270">
-                    <figcaption>
                     <h3>Ольга Репина</h3>
                     <h4>Frontend Developer</h4>
-                    </figcaption>
-                    </figure>
                 </li>
                 <li>
-                    <figure>
                     <img src="./images/man-3.jpg" alt="улыбающийся мужчина" width="270">
-                    <figcaption>
                     <h3>Николай Тарасов</h3>
                     <h4>Marketing</h4>
-                    </figcaption>
-                    </figure>
                 </li>
                 <li>
-                    <figure>
                     <img src="./images/man-4.jpg" alt="другой улабыющияся мужчина в очках" width="270">
-                    <figcaption>
                     <h3>Михаил Ермаков</h3>
                     <h4>UI Designer</h4>
-                    </figcaption>
-                    </figure>
                 </li>
             </ul>
         </section>
@@ -124,7 +108,7 @@
         <a href="">WebStudio</a>
         <address>
             <ul>
-                <li>Киев, пр-т Леси Украинки, 26</li>
+                <li><a href="https://goo.gl/maps/pCHkrpS1LhPa6uce7">Киев, пр-т Леси Украинки, 26</a></li>
                 <li><a href="mailto:info@devstudio.com ">info@devstudio.com</a></li>
                 <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
             </ul>
