--- a/index.html
+++ b/index.html
@@ -81,22 +81,22 @@
                 <li>
                     <img src="./images/man-1.jpg" alt="улыбающийся мужчина в очках" width="270">
                     <h3>Игорь Демьяненко</h3>
-                    <h4>Product Designer</h4>
+                    <p>Product Designer</p>
                 </li>
                 <li>
                     <img src="./images/man-2.jpg" alt="улабыющияся девушка в очках" width="270">
                     <h3>Ольга Репина</h3>
-                    <h4>Frontend Developer</h4>
+                    <p>Frontend Developer</p>
                 </li>
                 <li>
                     <img src="./images/man-3.jpg" alt="улыбающийся мужчина" width="270">
                     <h3>Николай Тарасов</h3>
-                    <h4>Marketing</h4>
+                    <p>Marketing</p>
                 </li>
                 <li>
                     <img src="./images/man-4.jpg" alt="другой улабыющияся мужчина в очках" width="270">
                     <h3>Михаил Ермаков</h3>
-                    <h4>UI Designer</h4>
+                    <p>UI Designer</p>
                 </li>
             </ul>
         </section>
