--- a/index.html
+++ b/index.html
@@ -63,13 +63,13 @@
             <h2>Чем мы занимаемся</h2>
             <ul>
                 <li>
-                    <img src="./images/box-1.jpg" alt="вёрстка сайтов" width="370">
+                    <img src="./images/box-1.jpg" alt="вёрстка сайтов" width="370" height="294">
                 </li>
                 <li>
-                    <img src="./images/box-2.jpg" alt="создание мобильных версий сайтов" width="370">
+                    <img src="./images/box-2.jpg" alt="создание мобильных версий сайтов" width="370" height="294">
                 </li>
                 <li>
-                    <img src="./images/box-3.jpg" alt="дизайн и визуальное оформление сайтов" width="370">
+                    <img src="./images/box-3.jpg" alt="дизайн и визуальное оформление сайтов" width="370" height="294">
                 </li>
             </ul>
         </section>
@@ -79,22 +79,22 @@
             <h2>Наша команда</h2>
             <ul>
                 <li>
-                    <img src="./images/man-1.jpg" alt="улыбающийся мужчина в очках" width="270">
+                    <img src="./images/man-1.jpg" alt="улыбающийся мужчина в очках" width="270" height="260">
                     <h3>Игорь Демьяненко</h3>
                     <p>Product Designer</p>
                 </li>
                 <li>
-                    <img src="./images/man-2.jpg" alt="улабыющияся девушка в очках" width="270">
+                    <img src="./images/man-2.jpg" alt="улабыющияся девушка в очках" width="270" height="260">
                     <h3>Ольга Репина</h3>
                     <p>Frontend Developer</p>
                 </li>
                 <li>
-                    <img src="./images/man-3.jpg" alt="улыбающийся мужчина" width="270">
+                    <img src="./images/man-3.jpg" alt="улыбающийся мужчина" width="270" height="260">
                     <h3>Николай Тарасов</h3>
                     <p>Marketing</p>
                 </li>
                 <li>
-                    <img src="./images/man-4.jpg" alt="другой улабыющияся мужчина в очках" width="270">
+                    <img src="./images/man-4.jpg" alt="другой улабыющияся мужчина в очках" width="270" height="260">
                     <h3>Михаил Ермаков</h3>
                     <p>UI Designer</p>
                 </li>
